<resources>
    <string name="app_name" translatable="false">Me</string>
    <string name="app_blank_string" translatable="false"> </string>
    <string name="app_error_text">Error</string>
    <string name="app_retry_text">Retry</string>
    <string name="app_refreshing_error_text">Refresh error</string>
    <string name="app_exception_message_generic">There was an application error</string>
    <string name="app_exception_message_no_connection">There is no internet connection</string>
    <string name="me_validation_required_asterisk" translatable="false"><![CDATA[ <sup><small>*</small></sup> ]]></string>
    <string name="me_validation_error_not_empty">Field is empty</string>
    <string name="me_validation_error_email_is_invalid">Email is invalid</string>
    <string name="me_validation_error_decimal">Not a valid number</string>
    <string name="me_ok">OK</string>
    <string name="me_cancel">Cancel</string>
    <string name="dashboard_property">Vouchers</string>
    <string name="dashboard_qr">QR</string>
    <string name="dashboard_records">Records</string>
    <string name="dashboard_vouchers">Vouchers</string>
    <string name="dashboard_currency">Currency</string>
    <string name="dashboard_assets">Assets</string>
    <string name="dashboard_profile">Account</string>
    <string name="onboard_welcome_text1">Me-app is your digital wallet and cash register.</string>
    <string name="onboard_welcome_text2">Skip the tutorial</string>
    <string name="onboard_digital_wallet_title">Your digital wallet</string>
    <string name="onboard_digital_wallet_text1">When you get a fund from Forus, use this app to store your vouchers, to see your balance and transactions, and easily submit a QR code to the provider.</string>
    <string name="onboard_cash_register_title">Cash register</string>
    <string name="onboard_cash_register_text1">If you offer products or services through Forus, you can add multiple employees to your organization, accept and manage payments directly in the Me App.</string>
    <string name="onboard_records_storage_title">Records storage</string>
    <string name="onboard_records_storage_text1">You can create and store your personal information as records in the Me app. Send a request to validate your record and use it when you apply for the appropriate Fund.</string>
    <string name="onboard_login_qr_title">Login by QR-code</string>
    <string name="onboard_login_qr_text1">With Me you can easily login to Forus without password. If you get a voucher or are you a provider scan the QR-code on the website and login safely to your personal account.</string>
    <string name="onboard_next">Next Step</string>
    <string name="onboard_login">Login</string>
    <string name="onboard_skip">Skip</string>
    <string name="welcome_greeting">Welcome to Me</string>
    <string name="welcome_create_account">Create account</string>
    <string name="welcome_restore_account">I already have a account</string>
    <string name="welcome_set_up_your_identity">Set up your identity</string>
    <string name="restore_login">Log in</string>
    <string name="restore_login_via_de_qr_code">login via qr-code</string>
    <string name="restore_scan_deze_qr">Scan this QR-Code with another device you have already registered</string>
    <string name="restore_inloggen_via_email">Login with email</string>
    <string name="restore_inloggen_via_qr">Add another device</string>
    <string name="restore_auth_code">Authorization code</string>
    <string name="restore_auth_code_description">Log in to the webshop, click on your account, then authorize device and enter this code.</string>
    <string name="restore_inloggen_by_email">Restore by email</string>
    <string name="restore_email_description">Please enter your e-mail address in order to receive your login details.</string>
    <string name="restore_pincode_description">Enter this pincode in your account</string>
    <string name="restore_email_instructions">The link was sent to your e-mail. Tap on it, wait for Success message and come back to Me.</string>
    <string name="restore_email_not_found">Identity not found</string>
    <string name="restore_email_invalid_link">Invalid link</string>
    <string name="restore_title_qr" translatable="false">QR-Code</string>
    <string name="restore_account_pair">Pair</string>
    <string name="restore_account_login_other_device">Log in with other device</string>
    <string name="new_account_field_email">E-mail</string>
    <string name="new_account_field_email_repeat">Repeat e-mail</string>
    <string name="new_account_field_first_name">Given Name</string>
    <string name="new_account_field_last_name">Family Name</string>
    <string name="new_account_field_bsn">BSN</string>
    <string name="new_account_field_phone">Phone number</string>
    <string name="new_account_title">New account</string>
    <string name="new_account_subtitle">Please provide your e-mail and information below. For registration primary email address is required. </string>
    <string name="new_account_error_already_in_use">Account already in use</string>
    <string name="new_account_email_repeat_error">Emails should be the same</string>
    <string name="passcode_title_create">Enter new pass code</string>
    <string name="passcode_title_confirm">Enter old passcode</string>
    <string name="passcode_title_new_confirm">Confirm new pass code</string>
    <string name="passcode_title_create_identity_wait">Please wait</string>
    <string name="passcode_subtitle_create">Secure your account by creating a passcode.</string>
    <string name="passcode_subtitle_confirm">In order to change your passcode, enter your old one</string>
    <string name="passcode_subtitle_new_confirm">Repeat your passcode to finally set it up</string>
    <string name="passcode_subtitle_create_not_match">Passwords don\'t match. Please try again</string>
    <string name="passcode_subtitle_create_identity">Creating identity</string>
    <string name="passcode_subtitle_change_error">Something went wrong :(</string>
    <string name="passcode_create_skip">Skip</string>
    <string name="passcode_changing">Changing passcode</string>
    <string name="passcode_title_pinlock_confirm">Confirm Passcode</string>
    <string name="passcode_subtitle_pinlock_confirm">Confirm your identity</string>
    <string name="passcode_subtitle_pinlock_checking">Checking</string>
    <string name="passcode_subtitle_pinlock_error">Wrong passcode</string>
    <string name="pair_header">PAIR</string>
    <string name="pair_title_pin">This is your pairing code</string>
    <string name="pair_title_qr">Scan this QR-Code with another device you are already logged in</string>
    <string name="lock_no_fingerprints">No fingerprints available</string>
    <string name="lock_fingerprint_title">Fingerprint authentication</string>
    <string name="lock_fingerprint_subtitle">Use fingerprint together with passcode. Confirm fingerprint to continue.</string>
    <string name="lock_fingerprint_hint">Touch sensor</string>
    <string name="lock_fingerprint_cancel">CANCEL</string>
    <string name="lock_fingerprint_error_hw_not_found">No fingerprint hardware found</string>
    <string name="lock_fingerprint_error_no_fingerprints">No fingerprints registered</string>
    <string name="lock_fingerprint_error_below_marshmallow">Android version doesn\'t support fingerprint</string>
    <string name="lock_fingerprint_error_auth_fail">Auth failed</string>
    <string name="lock_exit">Exit</string>
    <string name="lock_settings">Settings</string>
    <string name="lock_title">Lock Screen</string>
    <string name="lock_body">
        Secure lock screen hasn\'t set up. To continue working with this app,
        please got to Settings and set a lock screen method.
    </string>
    <string name="profile_app_settings">App settings</string>
    <string name="profile_start_from_scanner">Start from scanner</string>
    <string name="profile_use_pinlock">Use passcode</string>
    <string name="profile_use_fingerprint">Use fingerprint</string>
    <string name="profile_change_4digit">Change 4-digit passcode</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_button_show_qr">My QR-code</string>
    <string name="profile_about_me">About Me</string>
    <string name="profile_about_me_text">This app is intended to store vouchers, make payments and log in to different applications.\n \nThis app works together with:\n \n• 	the Nijmegen webshop;\n• 	the Westerkwartier webshop;\n• 	the Forus generic webshop.\n• 	the Winterswijk webshop.\n• 	the Oost Gelre webshop.\n• 	the Berkelland webshop.\n• 	the Noordoostpolder webshop.\n  \nLater on several shops and applications will be added.</string>
    <string name="profile_app_version">App version</string>
    <string name="profile_support" translatable="false">Support</string>
    <string name="profile_about">About</string>
    <string name="profile_logout_dialog_title">Logout</string>
    <string name="profile_logout_dialog_content">Are you sure you want to log out?</string>
    <string name="email_support">support@forus.io</string>
    <string name="price_agreement">Price agreement</string>
    <string name="price_agreement_total_price">Total price</string>
    <string name="price_agreement_discount_by_provider_">Discount by %1$s</string>
    <string name="price_agreement_contribution_by_sponsor_">Contribution by %1$s</string>
    <string name="price_agreement_paid_out_by_sponsor_">Paid out by %1$s</string>
    <string name="price_agreement_total_to_pay">Total which customer needs to pay</string>
    <string name="price_agreement_no_price">No price</string>
    <string name="price_agreement_n_v_t">n.v.t.</string>
    <string name="price_agreement_paid_by_customer">Paid by customer</string>
    <string name="price_agreement_notitie">Note</string>
    <string name="price_agreement_client_price">Price for the customer</string>
    <string name="price_agreement_sponsor_pays_you">%1$s betaalt u</string>
    <string name="new_record_title">New Record</string>
    <string name="new_record_title_choose_category">Choose Category</string>
    <string name="new_record_title_choose_type">Choose Type</string>
    <string name="new_record_title_choose_text">Text</string>
    <string name="new_record_title_choose_validators">Validators</string>
    <string name="new_record_choose_the_category_text">Select the category under which the new record should be added.</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_text1">Manage your personal properties and share easily the information needed to qualify for a subsidy.</string>
    <string name="privacy_title2">The source of information</string>
    <string name="privacy_text2">The information has been added by an organisation where you have applied for a subsidy, or by an organisation that supports it. For example, by your municipality.
</string>
    <string name="privacy_text4">All information is stored carefully and is not used for commercial purposes. Find out more about the Privacy Policy of Foundation Forus</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privileges">Privileges</string>
    <string name="privacy_text5">The information is stored under European privacy legislation. This gives you some rights like the&#160;right&#160;to:\n• Information\n• Inspect\n• Rectification\n• Oblivion\n• Data portability\n• Objection\n• Limitation of processing</string>
    <string name="privacy_text6">If you want to claim your rights or you have general questions or feedback please do reach our support</string>
    <string name="privacy_text7">Read all about your privacy rights with the Dutch Data Protection Authority</string>
    <string name="privacy_data_protection_authority">Data protection authority</string>
    <string name="qr_popup_restore_identity_title">Login</string>
</resources>