<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >





    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <include layout="@layout/toolbar_view"
            android:visibility="gone"
            />


        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_me_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <io.forus.me.android.presentation.view.component.text.TextView
            android:layout_marginTop="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_greeting"
            android:textSize="36sp"
            android:textColor="#de000000"
            app:type="bold" />

        <io.forus.me.android.presentation.view.component.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="#3e4a59"
            android:lineSpacingExtra="1sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_set_up_your_identity"
            app:type="bold"
            />


        <io.forus.me.android.presentation.view.component.editors.EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:hint="@string/new_account_field_email"
            app:validationRegex="email"
            app:validationError="@string/me_validation_error_email_is_invalid"
            android:inputType="textEmailAddress"/>

        <io.forus.me.android.presentation.view.component.buttons.Button
            android:id="@+id/restore"
            android:layout_marginTop="0dp"
            android:text="@string/qr_popup_restore_identity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <io.forus.me.android.presentation.view.component.text.TextView
            style="@style/CalloutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="26dp"
            android:text="@string/restore_account_login_other_device"
            app:type="medium" />


        <io.forus.me.android.presentation.view.component.buttons.Button
            android:id="@+id/pair_device"
            android:layout_marginTop="14dp"
            android:text="@string/restore_account_pair"
            app:reverse="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>