<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <include
            layout="@layout/toolbar_view"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <io.forus.me.android.presentation.view.component.buttons.ButtonWhite
                android:id="@+id/devOptionsBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dev"
                android:visibility="gone" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_me_logo" />


        </RelativeLayout>


        <io.forus.me.android.presentation.view.component.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_greeting"
            android:textColor="#de000000"
            android:textSize="30sp"
            app:type="bold" />

        <io.forus.me.android.presentation.view.component.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="1sp"
            android:text="@string/welcome_set_up_your_identity"
            android:textColor="#3e4a59"
            android:textSize="17sp"
            app:type="bold" />


        <io.forus.me.android.presentation.view.component.editors.EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:inputType="textEmailAddress"
            app:hint="@string/new_account_field_email"
            app:validationError="@string/me_validation_error_email_is_invalid"
            app:validationRegex="email" />

        <io.forus.me.android.presentation.view.component.buttons.Button
            android:id="@+id/restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/qr_popup_restore_identity_title" />

        <io.forus.me.android.presentation.view.component.text.TextView
            style="@style/CalloutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/restore_account_login_other_device"
            app:type="medium" />


        <io.forus.me.android.presentation.view.component.buttons.Button
            android:id="@+id/pair_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/restore_account_pair"
            app:reverse="true" />
    </LinearLayout>


</ScrollView>