<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include layout="@layout/toolbar_view" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="36dp"
                    android:orientation="vertical">


                    <io.forus.me.android.presentation.view.component.text.TextView
                        style="@style/Body2Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="27dp"
                        android:text="@string/restore_email_description" />

                    <io.forus.me.android.presentation.view.component.editors.EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:inputType="textEmailAddress"
                        app:hint="@string/new_account_field_email"
                        app:validationError="@string/me_validation_error_email_is_invalid"
                        app:validationRegex="email" />


                    <io.forus.me.android.presentation.view.component.editors.EditText
                        android:id="@+id/email_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:inputType="textEmailAddress"
                        android:visibility="gone"
                        app:hint="@string/new_account_field_email_repeat"
                        app:validationError="@string/me_validation_error_email_is_invalid"
                        app:validationRegex="email" />

                    <io.forus.me.android.presentation.view.component.text.TextView
                        android:id="@+id/email_description"
                        style="@style/Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restore_email_instructions" />

                </LinearLayout>
            </LinearLayout>


        </ScrollView>


        <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <io.forus.me.android.presentation.view.component.buttons.Button
                android:id="@+id/restore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/restore_inloggen_by_email" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

