<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_me_logo" />


        <io.forus.me.android.presentation.view.component.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/welcome_greeting"
            android:textColor="#de000000"
            android:textSize="36sp"
            app:type="bold" />

        <io.forus.me.android.presentation.view.component.text.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="1sp"
            android:text="@string/welcome_set_up_your_identity"
            android:textColor="#3e4a59"
            android:textSize="17sp"
            app:type="bold" />

        <io.forus.me.android.presentation.view.component.buttons.Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/welcome_create_account" />


        <io.forus.me.android.presentation.view.component.buttons.Button
            android:id="@+id/restore_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_restore_account"
            app:reverse="true" />
    </LinearLayout>

</ScrollView>